[package]
name = "shared"
version = "0.1.0"
authors = ["Jordan Morris <jtmorrisbytes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="lib"
crate-type = ["cdylib", "rlib"]
[dependencies]
rust_decimal = "1.9.0"
serde = {version="1.0.118", features=["derive"]}

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = {version="0.2.69",features=["serde-serialize"]}
js-sys = "0.3.46"
web-sys = {version="0.3.46", features=["console"]}
[target.'cfg(target_arch="wasm32")'.dev-dependencies]
console_error_panic_hook="0.1.6"
wasm-bindgen-test = "0.3.19"

[package.metadata.wasm-pack.profile.release]
#wasm-opt = ["-Oz", "--enable-mutable-globals"]
wasm-opt = false

[profile.dev]
panic="unwind"

[profile.release]
panic="unwind"